k8s/infrastructure/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/health/ready
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
