k8s/infrastructure/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
      name: client
    - port: 8222
      targetPort: 8222
      name: monitor
  type: ClusterIP
